--- a/Igra/Igra.csproj
+++ b/Igra/Igra.csproj
@@ -295,7 +295,8 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Scripts\Views\gamePageModel.js" />
+    <Content Include="Scripts\Views\gameServerProxy.js" />
+    <Content Include="Scripts\Views\gameModel.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
