Added signalr, added game creating

--- a/Igra/Web.config
+++ b/Igra/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="IgraContext"  connectionString="Data Source=RKONCARE-T460P\SQLEXPRESS;Initial Catalog=igra;User ID=usluge_db_usr;Password=usluge_db_pwd;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
+    <add name="IgraContext" connectionString="Data Source=RADOVAN-PC\SQLEXPRESS;Initial Catalog=igra;User ID=usluge_usr;Password=usluge_pwd;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
@@ -25,6 +25,8 @@
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+      <remove name="Session" />
+      <add name="Session" type="System.Web.SessionState.SessionStateModule" />
     </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
