--- a/Igra/Igra.csproj
+++ b/Igra/Igra.csproj
@@ -72,6 +72,12 @@
       <HintPath>..\packages\Microsoft.ApplicationInsights.2.2.0\lib\net45\Microsoft.ApplicationInsights.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.Core, Version=2.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.Core.2.2.3\lib\net45\Microsoft.AspNet.SignalR.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.SystemWeb, Version=2.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.SystemWeb.2.2.3\lib\net45\Microsoft.AspNet.SignalR.SystemWeb.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -235,6 +241,8 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\GameController.cs" />
+    <Compile Include="Controllers\GameApiController.cs" />
+    <Compile Include="DAL\Game.cs" />
     <Compile Include="DAL\ReadyForGame.cs" />
     <Compile Include="Filter\CheckLoginFilterAttribute.cs" />
     <Compile Include="Controllers\LoginApiController.cs" />
@@ -247,6 +255,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Hubs\Tasks.cs" />
     <Compile Include="Migrations\201805291615118_InitialCreate.cs" />
     <Compile Include="Migrations\201805291615118_InitialCreate.Designer.cs">
       <DependentUpon>201805291615118_InitialCreate.cs</DependentUpon>
@@ -254,6 +263,10 @@
     <Compile Include="Migrations\201806052146413_Add is female flag.cs" />
     <Compile Include="Migrations\201806052146413_Add is female flag.Designer.cs">
       <DependentUpon>201806052146413_Add is female flag.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806091751063_Added GamingUser and REadyForGame.cs" />
+    <Compile Include="Migrations\201806091751063_Added GamingUser and REadyForGame.Designer.cs">
+      <DependentUpon>201806091751063_Added GamingUser and REadyForGame.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
@@ -263,6 +276,7 @@
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="VM\AppCache.cs" />
     <Compile Include="VM\RegisterRequest.cs" />
     <Compile Include="VM\LoginRequest.cs" />
   </ItemGroup>
@@ -307,6 +321,8 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.signalR-2.2.3.js" />
+    <Content Include="Scripts\jquery.signalR-2.2.3.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -345,7 +361,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
@@ -355,6 +373,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806052146413_Add is female flag.resx">
       <DependentUpon>201806052146413_Add is female flag.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806091751063_Added GamingUser and REadyForGame.resx">
+      <DependentUpon>201806091751063_Added GamingUser and REadyForGame.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
