Added web.config change

--- a/Igra/Web.config
+++ b/Igra/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="IgraContext" connectionString="Data Source=RADOVAN-PC\SQLEXPRESS;Initial Catalog=igra;User ID=usluge_usr;Password=usluge_pwd;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <!--<add name="IgraContext" connectionString="Data Source=RADOVAN-PC\SQLEXPRESS;Initial Catalog=igra;User ID=usluge_usr;Password=usluge_pwd;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
+    <add name="IgraContext" connectionString="Data Source=sql6004.site4now.net;Initial Catalog=DB_A40CB5_igra;User ID=DB_A40CB5_igra_admin;Password=0112169566Rk;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
